Add proguard, add multiplatform WebView!